# VulkanFunctionalFramework

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/win64/: app_config.json
misc/nicp/: ARAP.py  MayaARAP.py  MayaNICP.py  NICP.py  README.md
src/: app_sample.cpp  app_sample.h  main.cpp  vulkan_sample.cpp  vulkan_sample.h
src/_interface/: CMakeLists.txt  camera.h  camera_component.h  camera_system.h  input.h  sdl_window.cpp  sdl_window.h  simple_camera.cpp  simple_camera.h  window.h
src/_old/: vulkan_commandbuffer.cpp  vulkan_commandbuffer.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_synchronization.cpp  vulkan_synchronization.h
src/_templates/: CMakeLists.txt  common.h  common.hpp
src/_vra/: vra.cpp  vra.h
src/render_graph/: CMakeLists.txt  backend.h  graph.h  pass.h  resource.h  system.h  vulkan_backend.h
src/render_graph/unit_test/: CMakeLists.txt  culling_compile_test.cpp  deferred_rendering_compile_test.cpp  lifetime_aliasing_test.cpp  resource_generation_compile_test.cpp  resource_producer_map_compile_test.cpp  resource_producer_map_compile_test.h
src/utility/: config_reader.h
